syntax = "proto3";

package llmoperator.fine_tuning.server.v1;

import "google/api/annotations.proto";

option go_package = "github.com/llm-operator/job-manager/api/v1";

// The API specification fllows OpenAPI API specification (https://platform.openai.com/docs/api-reference/fine-tuning/jobs).

message Job {
  string id = 1;
  int32 created_at = 2;
  message Error {
    string code = 1;
    string message = 2;
    string param = 3;
  }
  Error error = 3;
  string fine_tuned_model = 4;
  int32 finished_at = 5;
  message HyperParameter {
    // Note: OpenAI API supports string or interger.
    string n_epochs = 1;
  }
  HyperParameter hyperparameters = 6;
  string model = 7;
  string object = 8;
  string organization_id = 9;
  repeated string result_files = 10;
  string status = 11;
  int32 trained_tokens = 12;
  string training_file = 13;
  string validation_file = 14;
}

message CreateJobRequest {
  string model = 1;
  string training_file = 2;
  message HyperParameter {
    // Note: OpenAI API supports string or interger.
    string batch_size = 1;
    // Note: OpenAI API supports string or number.
    string learning_rate_multiplier = 2;
    // Note: OpenAI API supports string or interger.
    string n_epochs = 3;
  }
  HyperParameter hyperparameters = 3;
  string suffix = 4;
  string validation_file = 5;
}

message ListJobsRequest {
  string after = 1;
  int32 limit = 2;
}

message ListJobsResponse {
  string object = 1;
  repeated Job data = 2;
  bool has_more = 3;
}

message CancelJobRequest {
  string id = 1;
}

service FineTuningService {
  rpc CreateJob(CreateJobRequest) returns (Job) {
    option (google.api.http) = {
      post: "/v1/fine_tuning/jobs"
      body: "*"
    };
  }

  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {
    option (google.api.http) = {
      get: "/v1/fine_tuning/jobs"
    };
  }

  rpc CancelJob(CancelJobRequest) returns (Job) {
    option (google.api.http) = {
      post: "/v1/fine_tuning/jobs/{id}/cancel"
    };
  }
}
